[package]
name = "sfo-http"
version = "0.5.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/wugren/sfo-http.git"
description = "private http library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = { version = "0.16.0", optional = true }
lazy_static = "1.5.0"
governor = "0.6"
serde = "1.0.210"
serde_json = "1.0.128"
log = "0.4.22"
jsonwebtoken = "9.3.0"
reqwest = {version = "0.12", default-features = false, features = ["rustls-tls", "json", "http2"]}
chrono = "0.4.38"
json = "0.12.4"
sfo-result = "0.2"
actix-web = { version = "4", optional = true}
async-trait = "0.1.82"
futures-util = "0.3"
serde_qs = "0.13"
actix-files = { version = "0.6", optional = true}
utoipa = { version = "4.2", optional = true}
utoipa-swagger-ui = { version = "6.0", optional = true}
paste = "1.0"

[features]
actix-web = ["actix-files", "dep:actix-web", "utoipa-swagger-ui/actix-web", "utoipa/actix_extras"]
openapi = ["utoipa", "utoipa-swagger-ui"]
