[package]
name = "sfo-http"
version = "0.7.0"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/wugren/sfo-http.git"
description = "private http library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = { version = "0.16.0", optional = true }
lazy_static = "1.5.0"
governor = "0.10"
serde = "1.0.219"
serde_json = "1.0.142"
log = "0.4.27"
jsonwebtoken = "9.3.1"
reqwest = {version = "0.12", default-features = false, features = ["rustls-tls", "json", "http2"], optional = true}
chrono = "0.4.41"
json = "0.12.4"
sfo-result = "0.2.11"
actix-web = { version = "4", optional = true}
actix-cors = { version = "0.7.1", optional = true}
async-trait = "0.1.88"
futures-util = "0.3"
serde_qs = "0.13"
actix-files = { version = "0.6", optional = true}
utoipa = { version = "5.4.0", optional = true}
utoipa-swagger-ui = { version = "9.0.2", optional = true}
paste = "1.0"
sha2 = { version = "0.10", optional = true}
base58 = { version = "0.2.0", optional = true}
itertools = { version = "0.13", optional = true}
http = "1"
serde_with = {version = "3.14.0", optional = true}
hyper = {version = "1", features = ["full"], optional = true}
hyper-util = { version = "0.1", features = ["full"], optional = true}
http-body-util = { version = "0.1", optional = true }
serde_urlencoded = {version = "0.7.1", optional = true}
route-recognizer = { version ="0.3"}
tokio = { version = "1", features = ["full"]}
tokio-util = { version = "0.7", features = ["full"]}
futures-io = {version = "0.3.31", optional = true}
async-std = {version = "1", optional = true}

[features]
actix-web = ["actix-files", "dep:actix-web", "utoipa-swagger-ui/actix-web", "utoipa/actix_extras", "dep:actix-cors"]
openapi = ["utoipa", "utoipa-swagger-ui", "serde_with"]
hash_sign = ["sha2", "base58", "itertools"]
tide = ["dep:tide", "dep:futures-io", "dep:async-std"]
hyper = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:serde_urlencoded"]
client = ["dep:reqwest"]
